--- a/stuManager/src/main/resources/application.yml.example
+++ b/stuManager/src/main/resources/application.yml.example
@@ -2,9 +2,9 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1/your_dbname
-    username: your_dbuser
-    password: your_dbpassword
+    url: jdbc:mysql://127.0.0.1/stumanager
+    username: root
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     properties:
